--- a/ms.tex
+++ b/ms.tex
@@ -31,7 +31,9 @@
 
 \documentclass[fleqn, usenatbib]{mnras}
 \usepackage{style} % the settings are all here 
-\usepackage{booktabs,array}  
+\usepackage{booktabs,array} 
+\usepackage{lineno}
+\linenumbers
 
 \title[PNG with DESI Imaging]{Local primordial non-Gaussianity from the large-scale clustering of photometric DESI luminous red galaxies}
 
