--- a/sections/authorlist.tex
+++ b/sections/authorlist.tex
@@ -1,8 +1,8 @@
 % If you need two or more lines of authors, add an extra line using \newauthor
 
-\author[M. Rezaie et al.]{Mehdi Rezaie$^{1}$, Ashley J. Ross$^{2}$, Hee-Jong Seo$^{3}$,  Hui Kong$^{2}$,  Anna Porredon$^{2}$,\newauthor
-Lado Samushia$^{1}$, Edmond Chaussidon$^{4}$, Rongpu Zhou$^{5}$, Alex Krolewski$^{6,7,8}$,\newauthor
-Arnaud de Mattia$^{4}$,  Santi Avila$^{?}$, Benedict Bahr-Kalus$^{9}$, Jose Bermejo-Climent$^{?}$,\newauthor Florian Beutler$^{10}$, Klaus Honscheid$^{2,11}$, Eva Mueller$^{?}$, Adam Myers$^{?}$,\newauthor
+\author[M. Rezaie et al.]{Mehdi Rezaie$^{1}$, Ashley J. Ross$^{2}$, Hee-Jong Seo$^{3,5}$,  Hui Kong$^{2}$,  Anna Porredon$^{2}$,\newauthor
+Lado Samushia$^{1}$, Edmond Chaussidon$^{4}$, Alex Krolewski$^{6,7,8}$, Arnaud de Mattia$^{4}$,\newauthor
+Santiago Avila$^{8.5}$, Benedict Bahr-Kalus$^{9}$, Jose Bermejo-Climent$^{?}$,\newauthor Florian Beutler$^{10}$, Klaus Honscheid$^{2,11}$, Eva Mueller$^{?}$, Adam Myers$^{13}$,\newauthor
 Nathalie Palanque-Delabrouille$^{4,5}$, Will Percival$^{6,7,8,?}$, Christophe Yeche$^{4}$
 \\~\\
 % List of institutions
@@ -14,7 +14,9 @@ $^{5}$Lawrence Berkeley National Laboratory, 1 Cyclotron Road, Berkeley, CA 9472
 $^{6}$Department of Physics and Astronomy, University of Waterloo, 200 University Ave W, Waterloo, ON N2L 3G1, Canada\\
 $^{7}$Perimeter Institute for Theoretical Physics, 31 Caroline St. North, Waterloo, ON N2L 2Y5, Canada\\
 $^{8}$Waterloo Centre for Astrophysics, University of Waterloo, 200 University Ave W, Waterloo, ON N2L 3G1, Canada\\
+$^{8.5}$Institut de  F\'isica d'Altes Energies, The Barcelona Institute of Science and Technology, Campus UAB, 08193 Bellaterra (Barcelona), Spain\\
 $^{9}$Korea Astronomy and Space Science Institute, Yuseong-gu, Daedeok-daero 776, Daejeon 34055, Republic of Korea\\
 $^{10}$Institute for Astronomy, University of Edinburgh, Royal Observatory, Blackford Hill, Edinburgh EH9 3HJ, UK\\
-$^{11}$Department of Physics, The Ohio State University, 191 West Woodruff Avenue, Columbus, OH 43210, USA
+$^{11}$Department of Physics, The Ohio State University, 191 West Woodruff Avenue, Columbus, OH 43210, USA\\
+$^{13}$Department of Physics and Astronomy, University of Wyoming, Laramie, WY 82071, USA
 }
